Bug 1225470 - Report a message to the console when a service worker waitUntil() is rejected. r=baku, a=ritu